menu position function write & added menu dynamicaly & also add left_menu css, Right menu and center menu css missing. some issue face custom.css file 106 line before code not showing

--- a/css/custom.css
+++ b/css/custom.css
@@ -104,3 +104,6 @@ body {
     background: #ff6600;
     color: #fff;
   }
+  #header_area.left_menu .col-md-3{
+  order: 2;
+}
